<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App Profiles</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="MobileSuggest">Mobile Suggested Profile</string>
    <string name="CurrentWork">Currently Working Profile</string>
    <string name="ManuallySelect">Manually Select Profile</string>
    <string name="Exit">Exit</string>
    <string name="text1">Time Interval Changed\nSelect Profile</string>
    <string name="activate">Activate</string>
    <string name="enabled">Enabled</string>
    <string name="auto_start_on_boot">Auto start on Boot</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="sample_data">Sample Data</string>
    <string name="btn_text_add_profile">Add Profile</string>
    <string name="hint_profile_name">Profile Name</string>
    <string name="hint_end_time">End Time</string>
    <string name="hint_start_time">Start Time</string>
    <string name="btn_txt_create_profile">CREATE PROFILE</string>


</resources>
