<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.listofapps.MainActivity" >

    <item
        android:id="@+id/action_enable"
        android:orderInCategory="100"
        android:title="@string/enabled"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_boot"
        android:orderInCategory="100"
        android:title="@string/auto_start_on_boot"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never"/>

</menu>
