<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".MainActivity">

    <AbsoluteLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingTop="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="40dp"
        android:id="@+id/absoluteLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text1"
            android:text="Time Interval Changed

        Select Profile"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_17"
            android:textAlignment="center"
            android:background="@drawable/border_text" />

    </AbsoluteLayout>

    <AbsoluteLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/absoluteLayout"
        android:paddingLeft="40dp"
        android:paddingTop="30dp"
        android:paddingRight="40dp"
        android:paddingBottom="40dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/txt_size_15"
            android:textColor="@color/white"
            android:text="@string/MobileSuggest"
            android:background="@drawable/border_btn"
            android:id="@+id/btnMobileSuggest" />

        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
            android:textSize="@dimen/txt_size_15"
        android:textColor="@color/white"
        android:background="@drawable/border_btn"
        android:layout_y="70dp"
        android:text="@string/CurrentWork"
        android:id="@+id/btnCurrentWork"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textAlignment="center"
            android:textSize="@dimen/txt_size_15"
            android:textColor="@color/white"
            android:background="@drawable/border_btn"
            android:layout_y="140dp"
            android:text="@string/ManuallySelect"
            android:id="@+id/btnManuallySelect"/>

    </AbsoluteLayout>


</RelativeLayout>
